# caffe-intel

./: CMakeLists.txt  Makefile  Makefile.config  Makefile.mkldnn  README_FT  env_caffe.sh  notes.txt
cache_guide/: README  sample.prototxt
cmake/: CheckSSEFeatures.cmake
examples/mnist/: lenet_solver_pnetcdf.prototxt  lenet_train_test_pnetcdf.prototxt  train_lenet_pnetcdf.sh
include/caffe/: MultiSolver.hpp  common.hpp  layer.hpp  mpi.hpp  net.hpp  parallel.hpp  sgd_solvers.hpp  solver.hpp  solver_factory.hpp
include/caffe/internode/: mpiutil.hpp
include/caffe/layers/: annotated_data_layer.hpp  base_data_layer.hpp  batch_norm_layer.hpp  data_layer.hpp  image_data_layer.hpp  mkl_layers.hpp  mkldnn_layers.hpp  nbshuffle_pnetcdf_all_data_layer.hpp  pnetcdf_all_data_layer.hpp  shuffle_pnetcdf_all_data_layer.hpp  window_data_layer.hpp
include/caffe/parallel/: cpu_params.hpp  ga_sync_cpu.hpp  ga_sync_cpu2.hpp  ga_sync_cpu3.hpp  ga_sync_cpu4.hpp  groups.hpp  mpi_async_lazy_params_cpu.hpp  mpi_async_params_cpu.hpp  mpi_gossip_params_cpu.hpp  mpi_gossip_params_cpu10.hpp  mpi_gossip_params_cpu11.hpp  mpi_gossip_params_cpu12.hpp  mpi_gossip_params_cpu2.hpp  mpi_gossip_params_cpu6.hpp  mpi_gossip_params_cpu7.hpp  mpi_gossip_params_cpu8.hpp  mpi_gossip_params_cpu9.hpp  mpi_layerwise_async_const_cpu.hpp  mpi_layerwise_async_rotate_cpu.hpp  mpi_server_cpu.hpp  mpi_subgroup_nonblocking_cpu.hpp  mpi_sync_cpu.hpp  mpi_sync_params_cpu.hpp  mpi_sync_params_nb_cpu.hpp
include/caffe/util/: benchmark.hpp  cache.hpp  db.hpp  db_leveldb.hpp  db_lmdb.hpp  db_remote_index.hpp  db_remote_index_sftp.hpp
models/bvlc_alexnet/: solver.prototxt  train_val.prototxt
python/caffe/: __init__.py  _caffe.cpp
runs/alexnet_quicksolver/16_ranks/: 16_ranks_4_nodes_batch256.sh  16_ranks_4_nodes_blocking_batch256.sh  16_ranks_4_nodes_nonblocking_batch256.sh  alexnet_solver_exp.prototxt
runs/baseline_alexnet/16_ranks/: 16_ranks_4_nodes_batch256.sh  solver_batch256.prototxt
runs/baseline_alexnet/1_node/: 1_node_batch256.sh  1_node_batch4096.sh  solver_batch256.prototxt  solver_batch4096.prototxt  train_batch256_val_batch50.prototxt  train_batch4096_val_batch50.prototxt
runs/baseline_alexnet/64_ranks/: 64_ranks_4_nodes_batch256.sh  64_ranks_4_nodes_batch4096.sh  64_ranks_64_nodes_batch256.sh  64_ranks_64_nodes_batch4096.sh  solver_batch256.prototxt  solver_batch4096.prototxt
runs/blocking_alexnet/64_ranks/: 64_ranks_4_nodes_batch256.sh  64_ranks_4_nodes_batch4096.sh  solver_batch256.prototxt  solver_batch4096.prototxt  train_batch256_val_batch50.prototxt  train_batch4096_val_batch50.prototxt
runs/test3_alexnet/16nodes/: 16_nodes_on_4_puma_alexnet_rgbits3a.sh  solver3a.prototxt  train_val3a.prototxt
runs_puma/Alexnet_Quicksolver_Batchsize_256/Layerwise_current_constant/04_models/: 4_models_20_cores_batch256.sh  4_models_5_cores_batch256.sh  quicksolver_batch256.prototxt  train_batch256_val_batch50.prototxt
runs_puma/Alexnet_Quicksolver_Batchsize_256/Layerwise_current_constant/16_models/: 16_models_5_cores_batch256.sh  quicksolver_batch256.prototxt
runs_puma/Alexnet_Quicksolver_Batchsize_256/Layerwise_current_different/16_models/: 16_models_20_cores_batch256.sh  16_models_5_cores_batch256.sh  quicksolver_batch256.prototxt  train_batch256_val_batch50.prototxt
scripts/: 8nodes2.csh
src/caffe/: common.cpp  data_reader.cpp  data_transformer.cpp  mpi.cpp  net.cpp  parallel.cpp  solver.cpp
src/caffe/internode/: mpiutil.cpp
src/caffe/layers/: annotated_data_layer.cpp  base_data_layer.cpp  data_layer.cpp  image_data_layer.cpp  nbshuffle_pnetcdf_all_data_layer.cpp  pnetcdf_all_data_layer.cpp  shuffle_pnetcdf_all_data_layer.cpp  window_data_layer.cpp
src/caffe/multinode/: SynchronousNode.cpp
src/caffe/parallel/: cpu_params.cpp  ga_sync_cpu.cpp  ga_sync_cpu2.cpp  ga_sync_cpu3.cpp  ga_sync_cpu4.cpp  groups.cpp  mpi_async_lazy_params_cpu.cpp  mpi_async_params_cpu.cpp  mpi_gossip_params_cpu.cpp  mpi_gossip_params_cpu10.cpp  mpi_gossip_params_cpu11.cpp  mpi_gossip_params_cpu12.cpp  mpi_gossip_params_cpu2.cpp  mpi_gossip_params_cpu6.cpp  mpi_gossip_params_cpu7.cpp  mpi_gossip_params_cpu8.cpp  mpi_gossip_params_cpu9.cpp  mpi_layerwise_async_const_cpu.cpp  mpi_layerwise_async_rotate_cpu.cpp  mpi_server_cpu.cpp  mpi_subgroup_nonblocking_cpu.cpp  mpi_sync_cpu.cpp  mpi_sync_params_cpu.cpp  mpi_sync_params_nb_cpu.cpp
src/caffe/proto/: caffe.proto
src/caffe/solvers/: sgd_server_solver.cpp  sgd_solver.cpp
src/caffe/util/: benchmark.cpp  blocking_queue.cpp  cache.cpp  cpu_info.cpp  db.cpp  db_leveldb.cpp  db_lmdb.cpp  db_remote_index.cpp  db_remote_index_sftp.cpp  io.cpp
test/: test_groups.cpp
tools/: caffe.cpp  convert_imageset.cpp  extract_features.cpp  upgrade_solver_proto_text.cpp
